details in user list

--- a/src/app/college-marathon/marathon-info-dialog/marathon-info-dialog.component.html
+++ b/src/app/college-marathon/marathon-info-dialog/marathon-info-dialog.component.html
@@ -60,18 +60,18 @@
     <ul>
       <li>Se llevarán a cabo varias presentaciones de forma presencial de esta
         convocatoria, junto con un taller abierto y participativo en materia de acción
-        colectiva e incidencia pública al menos en universidades de la Ciudad de
-        México, Guadalajara, Puebla, Monterrey, Querétaro, Saltillo y Estado de
-        México. Se informará con anticipación sobre las fechas de presentación en
-        las redes sociales de Mexicolectivo. Las presentaciones serán transmitidas en
-        vivo en las redes sociales de Mexicolectivo y de las organizaciones
-        convocantes que lo deseen.</li>
+        colectiva e incidencia pública al menos en universidades de la Ciudad de México,
+        Guadalajara, Puebla, Monterrey, Querétaro, Saltillo y Estado de México. Se
+        informará con anticipación sobre las fechas de presentación en las redes sociales
+        de Mexicolectivo. Las presentaciones serán transmitidas en vivo en las redes
+        sociales de Mexicolectivo y de las organizaciones convocantes que lo deseen.</li>
       <li>La participación está abierta a jóvenes estudiantes de universidades públicas
         y privadas de todo el país.</li>
       <li>Las juventudes participantes deberán conformarse en equipos de mínimo
         tres personas a máximo 10 personas.</li>
       <li>Las propuestas realizadas deberán subirse a la plataforma digital de
-        Mexicolectivo <a href="https://mexicolectivo.com/maraton" target="_blank">aquí</a> dentro del rango de fechas
+        Mexicolectivo (<a href="https://mexicolectivo.com/maraton" target="_blank">mexicolectivo.com/maraton</a>) dentro
+        del rango de fechas
         establecidas en esta convocatoria.</li>
       <li>Las bases y resoluciones del Maratón Universitario x México son inapelables.</li>
     </ul>
@@ -118,20 +118,29 @@
       </tr>
 
       <tr>
-        <td>15 de Junio</td>
-        <td>Cierre de la plataforma y de las participaciones</td>
+        <td>30 de Junio</td>
+        <td>Cierre de la plataforma para la elaboración/modificación de propuestas.</td>
       </tr>
 
       <tr>
-        <td>Del 15 - al 29 de Junio</td>
+        <td>Hasta el 15 Julio</td>
+        <td>Campañas de difusión y votación por parte de los equipos.</td>
+      </tr>
+
+      <tr>
+        <td>Del 15 - al 30 de Julio</td>
         <td>Evaluación de las propuestas</td>
       </tr>
 
       <tr>
-        <td>30 de Junio</td>
-        <td>
-          Publicación de resultados en las redes sociales de las organizaciones convocantes y vía correo electrónico
+        <td>30 de Julio</td>
+        <td>Publicación de resultados en las redes sociales de las organizaciones convocantes y vía correo electrónico
         </td>
+      </tr>
+
+      <tr>
+        <td>8 y 9 Septiembre</td>
+        <td>Fortalecimiento de propuestas ganadoras y presentación pública en el Senado de la República.</td>
       </tr>
     </table>
   </div>
@@ -140,8 +149,8 @@
     <h3>TERCERA. INSCRIPCIONES</h3>
     <ul>
       <li>Las juventudes participantes deberán conformarse en equipos de mínimo tres personas a máximo 10 personas.</li>
-      <li>La inscripción de los equipos será a través de la plataforma de Mexicolectivo en el siguiente <a
-          href="https://mexicolectivo.com/maraton" target="_blank">link</a></li>
+      <li>La inscripción de los equipos será a través de la <strong>plataforma de Mexicolectivo</strong> en el siguiente
+        <a href="https://mexicolectivo.com/maraton" target="_blank">link</a></li>
       <li>Cada equipo participante deberá designar a una persona representante,
         cuyo correo electrónico será tomado como referencia para futuras
         notificaciones.</li>
