--- a/src/app/pando/user-details-dialog/user-details-dialog.component.scss
+++ b/src/app/pando/user-details-dialog/user-details-dialog.component.scss
@@ -1,5 +1,7 @@
 :host {
   padding: 20px;
+  float: left;
+  width: 100%;
 
   .dlghd {
     display: flex;
@@ -12,7 +14,41 @@
         display: inline-flex;
         align-items: center;
         justify-content: center;
+        zoom: 0.7;
       }
     }
+  }
+
+  .dlgbdy {
+    margin-top: 40px;
+
+    .usrtype {
+      margin-bottom: 20px;
+    }
+
+    .subLayouts {
+      background: #f1f1f1;
+      border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
+      padding: 20px;
+
+
+      .coverage,
+      .topics {
+        margin-top: 20px;
+
+        h4 {
+          margin-bottom: 5px;
+        }
+      }
+    }
+
+    .field:not(:first-child) {
+      margin-top: 20px;
+    }
+  }
+
+  ::ng-deep .mat-expansion-panel-body {
+    width: 100%;
+    margin: 0;
   }
 }
