--- a/src/app/pando/users-list/users-list.component.html
+++ b/src/app/pando/users-list/users-list.component.html
@@ -30,6 +30,18 @@
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="avatarImage">
+        <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
+        <td mat-cell *matCellDef="let users">
+          <div class="avatar" *ngIf="users['avatarImage'] != null">
+            <img [src]="users['avatarImage']" alt="{{users.firstname | titlecase}} {{users.lastname | titlecase}}">
+          </div>
+          <div class="avatar" *ngIf="users['avatarImage'] == null">
+            <small>{{users.firstname | titlecase | firstletter}}{{users.lastname | titlecase | firstletter}}</small>
+          </div>
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Nombre</th>
         <td mat-cell *matCellDef="let users">
@@ -56,6 +68,13 @@
         <td mat-cell *matCellDef="let users">
           <small *ngIf="users.activities.length == 0">NA</small>
           <small *ngIf="users.activities.length != 0">{{users.activities[0].viewValue}}</small>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="createtAt">
+        <th mat-header-cell *matHeaderCellDef>Alta</th>
+        <td mat-cell *matCellDef="let users">
+          <small>{{users['createdAt'] | date: 'mediumDate'}} - {{users['createdAt'] | date: 'mediumTime'}}</small>
         </td>
       </ng-container>
 
@@ -92,7 +111,18 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator #matPaginator [length]="users.length" [pageSizeOptions]="[20, 40, 60, 80, 100]" showFirstLastButtons>
+    <mat-paginator #matPaginator [length]="users.length" [pageSizeOptions]="[20, 40, 60, 80, 100]" showFirstLastButtons
+      [pageIndex]="pageIndex" (page)="handlePageEvent($event)">
     </mat-paginator>
+
+    <!-- <div class="set-12 pagination">
+      <small>Usuarios: {{users.length}}</small>
+      <button type="button">
+        <mat-icon>navigate_before</mat-icon>
+      </button>
+      <button type="button" (click)="loadNextUserBatch()">
+        <mat-icon>navigate_next</mat-icon>
+      </button>
+    </div> -->
   </div>
 </div>
