--- a/src/app/pando/users-list/users-list.component.scss
+++ b/src/app/pando/users-list/users-list.component.scss
@@ -8,10 +8,46 @@
     box-shadow: 0 3px 3px -3px grey;
   }
 
-  mat-spinner {
-    position: absolute !important;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  .avatar {
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    background: #f1f1f1;
+    overflow: hidden;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 9pt;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  .pagination {
+    padding: 10px 24px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    font-size: 11pt;
+
+    * {
+      margin: 0;
+    }
+
+    button {
+      margin-left: 10px;
+    }
+  }
+
+  .loading {
+    mat-spinner {
+      position: absolute !important;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
