--- a/src/app/components/floating-sheet/floating-sheet.component.html
+++ b/src/app/components/floating-sheet/floating-sheet.component.html
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<div class="set-12">
+<div class="set-12 sheet-body">
   <div class="set-12 btnhldr">
     <button type="button" class="tool" mat-raised-button color="warn" (click)="popComplaintsDialog()">
       <mat-icon>warning</mat-icon>
