--- a/src/app/posts/components/use-tools-dialog/use-tools-dialog.component.html
+++ b/src/app/posts/components/use-tools-dialog/use-tools-dialog.component.html
@@ -3,8 +3,9 @@
   <p>Para hacer uso de las herramientas del <strong>Muro Colectivo</strong> necesitas una cuenta.</p>
 
   <div class="set-12 links">
-    <p><a href="javascript:void(0)" (click)="killDialog(); utilityService.linkMe('/hub/signin-mobile')">Ingresar</a> |
-      <a href="javascript:void(0)" (click)="killDialog(); utilityService.linkMe('/hub/signup-mobile')">Registro</a>
+    <p>
+      <a href="javascript:void(0)" (click)="linkLogin()">Ingresar</a> |
+      <a href="javascript:void(0)" (click)="linkRegister()">Registro</a>
     </p>
   </div>
 
