--- a/src/app/public-documents/public/public.component.html
+++ b/src/app/public-documents/public/public.component.html
@@ -77,6 +77,8 @@
       </mat-card>
     </div>
   </div>
+
+  <div class="public-document-mobile-fixed-tools" [user]="user" [isCollaborator]="isCollaborator"></div>
 </div>
 
 <!-- mobile -->
