--- a/src/app/components/share-sheet/share-sheet.component.html
+++ b/src/app/components/share-sheet/share-sheet.component.html
@@ -19,6 +19,11 @@
   <a class="twitter-share-button icon twitter-net"
     href="https://twitter.com/intent/tweet?text=Mexicolectivo&url={{url}}&hashtags=mexicolectivo" target="_blank"></a>
 
+  <button type="button" class="icon whatsapp-net"></button>
+  <button type="button" class="icon email-net">
+    <mat-icon>email</mat-icon>
+  </button>
+
 
   <!-- <button type="button" class="icon instagram-net" disabled></button>
   <button type="button" class="icon whatsapp-net" disabled></button>
