--- a/src/app/posts/single-post/single-post.component.html
+++ b/src/app/posts/single-post/single-post.component.html
@@ -53,10 +53,12 @@
         </div>
 
         <div class="set-12 crdvp">
-          <img [src]="post['card']['images'][0]" alt="" class="full" *ngIf="post['card']['images'].length != 0" />
+          <img [src]="post['card']['images'][0]" alt="" class="full"
+            *ngIf="post['card']['images'].length != 0 && post['card']['hasVideo'] == undefined" />
           <img src="../../assets/images/mexicolectivo-small-blue.png" alt=""
-            *ngIf="post['card']['images'].length == 0" />
-          <video controls [src]="post['card']['images'][0]" *ngIf="post['card']['hasVideo']" class="full"></video>
+            *ngIf="post['card']['images'].length == 0 && post['card']['hasVideo'] == undefined" />
+          <video controls [src]="post['card']['images'][0]"
+            *ngIf="post['card']['images'].length != 0 && post['card']['hasVideo']" class="full"></video>
         </div>
 
         <div class="set-12 crdft">
