add share buttons

--- a/src/app/components/invite-dialog/invite-dialog.component.scss
+++ b/src/app/components/invite-dialog/invite-dialog.component.scss
@@ -5,9 +5,10 @@
     margin-bottom: 20px;
 
     button {
-      display: flex;
+      display: inline-flex;
       align-items: center;
       justify-content: center;
+      zoom: 0.7;
     }
   }
 
