--- a/src/app/complaints/single-complaint/single-complaint.component.html
+++ b/src/app/complaints/single-complaint/single-complaint.component.html
@@ -26,7 +26,7 @@
         <span *ngIf="card[0].avatarImage == null && card[0].createdBy == null ">
           A          </span>
         
-        <span *ngIf="card[0].avatarImage == null card[0].createdBy != null">
+        <span *ngIf="card[0].avatarImage == null && card[0].createdBy != null">
           {{ complaint?.createdBy.firstname | firstword | firstletter
           }}{{ complaint?.createdBy.lastname | firstword | firstletter }}
         </span>
