--- a/src/app/components/single-complaint-dialog/single-complaint-dialog.component.html
+++ b/src/app/components/single-complaint-dialog/single-complaint-dialog.component.html
@@ -36,6 +36,6 @@
   </div>
 
   <div class="set-12 gallery" *ngIf="complaint?.images?.length != 0">
-    <slider-images [images]="complaint?.images" [complaint]="complaint"></slider-images>
+    <slider-images [images]="complaint?.images" [complaint]="complaint" [obj]="'single-post'"></slider-images>
   </div>
 </div>
