--- a/src/app/components/categorize-post/categorize-post.component.scss
+++ b/src/app/components/categorize-post/categorize-post.component.scss
@@ -60,6 +60,20 @@
     }
   }
 
+  .combos {
+    .set-8 {
+      padding-right: 40px;
+
+      .title {
+        margin-bottom: 20px;
+      }
+
+      .obj:not(:first-child) {
+        margin-top: 30px;
+      }
+    }
+  }
+
   ::ng-deep .mat-form-field-appearance-outline .mat-form-field-wrapper {
     margin: 0;
   }
