--- a/src/app/components/slider-images/slider-images.component.scss
+++ b/src/app/components/slider-images/slider-images.component.scss
@@ -27,7 +27,7 @@
         width: 100%;
         height: 450px;
         display: none;
-        object-fit: cover;
+        // object-fit: cover;
         // opacity: 0;
 
         &.active {
