--- a/src/app/pando/users-list/users-list.component.scss
+++ b/src/app/pando/users-list/users-list.component.scss
@@ -6,6 +6,7 @@
 
   .userlist {
     box-shadow: 0 3px 3px -3px grey;
+    margin-top: 30px;
   }
 
   .avatar {
@@ -39,6 +40,24 @@
 
     button {
       margin-left: 10px;
+    }
+  }
+
+  .tools {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+    * {
+      margin: 0;
+    }
+
+    ::ng-deep .mat-form-field-wrapper {
+      padding: 0 !important;
+    }
+
+    .set-1 {
+      margin-left: 20px;
     }
   }
 
