--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -14,10 +14,35 @@
     padding: 0;
   }
 
+  .side-menu {
+    width: 30%;
+    padding: 40px 20px;
+    float: left;
+    position: fixed;
+
+    .btnhldr {
+      margin-top: 5px;
+
+      button {
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+
+        mat-icon {
+          font-size: 11pt;
+          margin-right: 5px;
+        }
+      }
+    }
+  }
+
   .crdlst {
     width: 40%;
-    margin: 0 30%;
+    // margin: 0 30%;
+    margin-left: 30%;
     padding: 40px 0;
+    float: left;
   }
 
   .crdh {
@@ -265,7 +290,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      margin-bottom: 30px;
+      margin-bottom: 10px;
 
       * {
         margin: 0;
