--- a/src/app/posts/single-post/single-post.component.scss
+++ b/src/app/posts/single-post/single-post.component.scss
@@ -135,6 +135,11 @@
     img.full {
       width: 100%;
     }
+
+    video.full {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .crdft {
